ACLOCAL_AMFLAGS = -I ../m4 -Wnone

# Automake doesn't support infos_TEXINFOS to be defined conditionnaly
info_TEXINFOS = oml-user-manual.texinfo

DATE=`date "+%Y-%m-%d"`
ALL_MAN_FILES= \
	liboml2.1.txt \
	oml2-server.1.txt \
	oml2-proxy-server.1.txt \
	oml2-scaffold.1.txt \
	liboml2.3.txt \
	omlc_init.3.txt \
	omlc_add_mp.3.txt \
	omlc_start.3.txt \
	omlc_inject.3.txt \
	omlc_close.3.txt \
	OmlValueU.3.txt \
	liboml2.conf.5.txt

OMLVALUE3_LINKS= \
	omlc_zero.3 \
	omlc_zero_array.3 \
	omlc_set_int32.33 \
	omlc_set_uint32.3 \
	omlc_set_int64.3 \
	omlc_set_uint64.3 \
	omlc_set_double.3 \
	omlc_set_string.3 \
	omlc_set_string_copy.3 \
	omlc_copy_string.3 \
	omlc_reset_string.3 \
	omlc_set_blob.3 \
	omlc_copy_blob.3 \
	omlc_reset_blob.3

# Doxygen is a bit braindamages and doesn't seem to be able to either
# * parse file with no extension as something else than C
# * include and parse contents from another file
# On the plus side, this gives us an opportunity to do some search/replace
# and avoid poluting the human-readable source files while providing nice
# Doxygen links.
# Note: doxygen.am has been modified so @DX_DOCDIR@/@PACKAGE@.tag depends on $(DX_EXTRA_DOC)
DX_EXTRA_DOC = mainpage.md install.md example.md
define README-mdfy
	sed -e '1s/$$/\t{$1}/' \
		-e 's^\([^/]\)README^\1[README](@ref index)^g' \
		-e 's^INSTALL^[&](@ref install)^g' \
		-e 's^example/liboml2/README^[&](@ref example)^' \
		-e 's/OML4R/[&](@ref oml4rdoc)/g' \
		-e 's/OML4Py/[&](@ref oml4pydoc)/g' \
		-e '/^    /!s^\(\(lib\)\?[Oo]ml[-.a-zA-Z1-9]\+\)(\([0-9]\))^[&](http://oml.mytestbed.net/doc/oml/$(VERSION)/\1.\3.html)^g'
endef
mainpage.md: $(top_srcdir)/README
	$(call README-mdfy,#mainpage) $< > $@
install.md: $(top_srcdir)/INSTALL
	$(call README-mdfy,#install) $< > $@
example.md: $(top_srcdir)/example/liboml2/README
	$(call README-mdfy,#example) $< > $@

html_docs = $(ALL_MAN_FILES:.txt=.html)

EXTRA_DIST=$(ALL_MAN_FILES) \
	   bugs.txt \
	   manual.txt \
	   doxygen.am Doxyfile
CLEANFILES=$(ALL_MAN_FILES:.txt=) \
	liboml2.3 \
	oml2_scaffold.1 \
	$(OMLVALUE3_LINKS) \
	oml2_scaffold.1 \
	oml_inject_MPNAME.3 \
	$(html_docs) \
	$(DX_EXTRA_DOC)

MOSTLYCLEANFILES=$(DX_CLEANFILES)

if ENABLE_DOC
include doxygen.am

if DX_COND_doc
all: doxygen-doc
endif

ASCIIDOC_ARGS = --attribute='badges' --attribute='icons'
ASCIIDOC_ARGS += --attribute='pkglocalstatedir=$(pkglocalstatedir)' --attribute='oml_version=$(VERSION)' --attribute='pkgdatadir=$(pkgdatadir)'
if HAVE_LIBPQ
ASCIIDOC_ARGS += --attribute='have_pg'
endif
A2X_ARGS = --destination-dir=. -f manpage $(ASCIIDOC_ARGS) --attribute='date=$(DATE)'

if HAVE_A2X
man_MANS = $(ALL_MAN_FILES:.txt=) \
	$(OMLVALUE3_LINKS) \
	oml2_scaffold.1 \
	oml_inject_MPNAME.3

$(ALL_MAN_FILES:.txt=):  %: %.txt bugs.txt manual.txt
	$(A2X) $(A2X_ARGS) $<
	export XMLOUT=`echo $< | sed s/.txt$$/.xml/`; \
	       test -f $${XMLOUT} && rm $${XMLOUT} || true

# Set up ROFF links
#  - the OmlValueU manipulation macros (they share the same manpage).
$(OMLVALUE3_LINKS):
	echo ".so man3/OmlValueU.3" > $@
#  - oml_inject_MPNAME helpers, generated by oml2-scaffold but documented in
#  liboml(3)
oml_inject_MPNAME.3:
	echo ".so man3/liboml2.3" > $@
#  - oml2_scaffold (renamed to oml2-scaffold)
oml2_scaffold.1:
	echo ".so man1/oml2-scaffold.1" > $@

EXTRA_DIST+=$(ALL_MAN_FILES:.txt=)  \
	$(OMLVALUE3_LINKS) \
	oml2_scaffold.1 \
	oml_inject_MPNAME.3

else #!HAVE_A2X
	@echo "*** a2x (asciidoc) is required to generate $(@) ***"
endif #HAVE_A2X

if HAVE_ASCIIDOC
SUFFIXES = .html
.txt.html:
	$(ASCIIDOC) $(ASCIIDOC_ARGS) -o $@ $<

all: html
html:	$(html_docs)

.PHONY: html
else #!HAVE_ASCIIDOC
	@echo "*** a2x (asciidoc) is required to generate $(@) ***"
endif #HAVE_ASCIIDOC

endif #ENABLE_DOC
