ACLOCAL_AMFLAGS = -I ../m4 -Wnone

# Automake doesn't support infos_TEXINFOS to be defined conditionnaly
info_TEXINFOS = oml-user-manual.texinfo

DATE=`date "+%Y-%m-%d"`
ALL_MAN_FILES= \
	liboml2.1.txt \
	oml2-server.1.txt \
	oml2-proxy-server.1.txt \
	oml2-scaffold.1.txt \
	liboml2.3.txt \
	omlc_init.3.txt \
	omlc_add_mp.3.txt \
	omlc_start.3.txt \
	omlc_inject.3.txt \
	omlc_close.3.txt \
	OmlValueU.3.txt \
	liboml2.conf.5.txt

OMLVALUE3_LINKS= \
	omlc_zero.3 \
	omlc_zero_array.3 \
	omlc_set_int32.33 \
	omlc_set_uint32.3 \
	omlc_set_int64.3 \
	omlc_set_uint64.3 \
	omlc_set_double.3 \
	omlc_set_string.3 \
	omlc_set_string_copy.3 \
	omlc_copy_string.3 \
	omlc_reset_string.3 \
	omlc_set_blob.3 \
	omlc_copy_blob.3 \
	omlc_reset_blob.3

html_docs = $(ALL_MAN_FILES:.txt=.html)

EXTRA_DIST=$(ALL_MAN_FILES) \
	   bugs.txt \
	   manual.txt \
	   doxygen.am Doxyfile
	$(OMLVALUE3_LINKS) \
	oml2_scaffold.1 \
	oml_inject_MPNAME.3 \
	$(html_docs)

MOSTLYCLEANFILES=$(DX_CLEANFILES)

if ENABLE_DOC
include doxygen.am

if DX_COND_doc
all: doxygen-doc
endif

ASCIIDOC_ARGS = --attribute='badges' --attribute='icons'
ASCIIDOC_ARGS += --attribute='pkglocalstatedir=$(pkglocalstatedir)' --attribute='oml_version=$(VERSION)' --attribute='pkgdatadir=$(pkgdatadir)'
if HAVE_LIBPQ
ASCIIDOC_ARGS += --attribute='have_pg'
endif
A2X_ARGS = --destination-dir=. -f manpage $(ASCIIDOC_ARGS) --attribute='date=$(DATE)'

if HAVE_A2X
man_MANS = $(ALL_MAN_FILES:.txt=) \
	$(OMLVALUE3_LINKS) \
	oml2_scaffold.1 \
	oml_inject_MPNAME.3

$(ALL_MAN_FILES:.txt=):  %: %.txt bugs.txt manual.txt
	$(A2X) $(A2X_ARGS) $<
	export XMLOUT=`echo $< | sed s/.txt$$/.xml/`; \
	       test -f $${XMLOUT} && rm $${XMLOUT} || true

# Set up ROFF links
#  - the OmlValueU manipulation macros (they share the same manpage).
$(OMLVALUE3_LINKS):
	echo ".so man3/OmlValueU.3" > $@
#  - oml_inject_MPNAME helpers, generated by oml2-scaffold but documented in
#  liboml(3)
oml_inject_MPNAME.3:
	echo ".so man3/liboml2.3" > $@
#  - oml2_scaffold (renamed to oml2-scaffold)
oml2_scaffold.1:
	echo ".so man1/oml2-scaffold.1" > $@

EXTRA_DIST+=$(ALL_MAN_FILES:.txt=)  \
	$(OMLVALUE3_LINKS) \
	oml2_scaffold.1 \
	oml_inject_MPNAME.3

else #!HAVE_A2X
	@echo "*** a2x (asciidoc) is required to generate $(@) ***"
endif #HAVE_A2X

if HAVE_ASCIIDOC
SUFFIXES = .html
.txt.html:
	$(ASCIIDOC) $(ASCIIDOC_ARGS) -o $@ $<

all: html
html:	$(html_docs)

.PHONY: html
else #!HAVE_ASCIIDOC
	@echo "*** a2x (asciidoc) is required to generate $(@) ***"
endif #HAVE_ASCIIDOC

endif #ENABLE_DOC
