ACLOCAL_AMFLAGS = -I ../m4

EXTRA_DIST = liboml2/README \
	     liboml2/generator.rb \
	     liboml2/generator.c \
	     liboml2/config.h \
	     liboml2/Makefile \
	     liboml2-conf/config.xml \
	     liboml2-conf/config_text_stream.xml \
	     liboml2-conf/config_two_streams.xml \
	     server/haproxy.conf \
	     server/oml2-server-hook.sh

nobase_pkgdata_DATA = liboml2/README \
		      liboml2/generator.rb \
		      liboml2/generator.c \
		      liboml2/config.h \
		      liboml2/Makefile \
		      liboml2-conf/config.xml \
		      liboml2-conf/config_text_stream.xml \
		      liboml2-conf/config_two_streams.xml \
		      server/haproxy.conf \
		      server/oml2-server-hook.sh
